--- a/report/_config.yml
+++ b/report/_config.yml
@@ -1,4 +1,4 @@
-title: "Predicting Student's Success with Academic Performance Record"
+title: "Predicting Vancouver's Airbnb Price"
 author: "Bill Wan"
 date: "2024-01-05"
 sphinx:
